snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-all.jar.md5
b95849250bd6d8ebb744c21bfb356e82